# netbox-device-autodiscovery

./: .gitignore  README.md  active_recognition.py  configuration.example.toml  configuration.py  logger.py  netbox_templates.py  pyproject.toml  requirements.txt  run.py  shared_objects.py  utils.py
modules/: avaya_ip_office_phones_enumerator.py
modules/nmap_network_scanner/: __init__.py  active_recognition.py  nmap_network_scanner.py
